--- a/index.html
+++ b/index.html
@@ -10,25 +10,25 @@
     <div class="scroll"><marquee direction="right">Designed by Suraj</marquee></div>
     <h1>Play card flex box</h1>
     <div class="wrapper1">
-        <div class="container"><img src="img/Red1.png" alt="card no 1"></div>
-        <div class="container"><img src="img/Red2.png" alt="card no 2"></div>
-        <div class="container"><img src="img/Red3.png" alt="card no 3"></div>
-        <div class="container"><img src="img/Red4.png" alt="card no 4"></div>
-        <div class="container"><img src="img/Red5.png" alt="card no 5"></div>
-        <div class="container"><img src="img/Red6.png" alt="card no 6"></div>
-        <div class="container"><img src="img/Red7.png" alt="card no 7"></div>
+        <div class="container"><img src="Red1.png" alt="card no 1"></div>
+        <div class="container"><img src="Red2.png" alt="card no 2"></div>
+        <div class="container"><img src="Red3.png" alt="card no 3"></div>
+        <div class="container"><img src="Red4.png" alt="card no 4"></div>
+        <div class="container"><img src="Red5.png" alt="card no 5"></div>
+        <div class="container"><img src="Red6.png" alt="card no 6"></div>
+        <div class="container"><img src="Red7.png" alt="card no 7"></div>
         <div class="container"><img src="img/Red8.png" alt="card no 8"></div>
         
     </div>
     <div class="wrapper2">
-        <div class="container"><img src="img/Black1.png" alt="card no 1"></div>
-        <div class="container"><img src="img/Black2.png" alt="card no 2"></div>
-        <div class="container"><img src="img/Black3.png" alt="card no 3"></div>
-        <div class="container"><img src="img/Black4.png" alt="card no 4"></div>
-        <div class="container"><img src="img/Black5.png" alt="card no 5"></div>
-        <div class="container"><img src="img/Black6.png" alt="card no 6"></div>
-        <div class="container"><img src="img/Black7.png" alt="card no 7"></div>
-        <div class="container"><img src="img/Black8.png" alt="card no 8"></div>
+        <div class="container"><img src="Black1.png" alt="card no 1"></div>
+        <div class="container"><img src="Black2.png" alt="card no 2"></div>
+        <div class="container"><img src="Black3.png" alt="card no 3"></div>
+        <div class="container"><img src="Black4.png" alt="card no 4"></div>
+        <div class="container"><img src="Black5.png" alt="card no 5"></div>
+        <div class="container"><img src="Black6.png" alt="card no 6"></div>
+        <div class="container"><img src="Black7.png" alt="card no 7"></div>
+        <div class="container"><img src="Black8.png" alt="card no 8"></div>
     </div>
     <h2>Thank You</h2>
 </body>
